--- a/config.ini
+++ b/config.ini
@@ -84,19 +84,19 @@ stream_end_transition=0
 ;;;
 [discord]
 ; bot authentication token to login with
-token=
+token= MjIzNTc3MTMxMjE5ODEyMzYy.DKjd8A.u5fBfHDq8Fp4vg0AtV6PQH1XQPc
 ; text channel ID that bot interacts with
-text_channel=
+text_channel= 361345484423692318
 ; text channel ID to log some of the messages
-log_channel=
+log_channel= 361345484423692318
 ; voice channel ID used to stream the music
-voice_channel=
+voice_channel= 361345525917941780
 ; voice channel ID used to move users to when connecting to direct stream
 ; specifying this enables seamless stream switch feature, avoiding the need to disconnect before using direct stream
-direct_channel=
+direct_channel= 361345525917941780
 ; role id used to distinguish privileged users
 ; hint: to get role ID mention it in a chat with a backslash in front, e.g. \@Role
-operator_role=
+operator_role= 148349717531721728
 
 ;;;
 ;;; Embedded direct ICY stream server settings
